--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>frontend boilerplate</title>
+  <title>Marfeel Frontend test | by Adrian Peso</title>
 </head>
 <body>
-  <h1>Your Project starts here</h1>
-  <p>This boilerplate compiles es6 and scss to its respective languages suported by the browser</p>
+  <div class="container">
+
+      <div class="search-container">
+
+          <form class="search-form">
+            <input name="user" type="text" class="search-form__input-text" placeholder="Search username...">
+          </form>
+          <button class="search-form__search-button">Search</button>
+
+      </div>
+<!--
+      <div class="result-container">
+          <div class="error"></div>
+
+          <div class="profile">
+
+            <div class="profile__photo"></div>
+            <div class="profile__name"></div>
+            <div class="profile__full-name"></div>
+            <div class="profile__bio"></div>
+
+          </div>
+
+          <div class="repositories">
+
+            <h2 class="repositories__title">Repositories</h2>
+            <hr>
+
+            <div class="repo">
+              <h3>Repo name</h3>
+              <div class="repo__stars">10</div>
+              <div class="repo__fork">30</div>
+            </div>
+
+          </div>
+        
+      </div>
+-->
+  </div>
 </body>
 </html>
