ended functionality. added some sass and cleaned html

--- a/src/index.html
+++ b/src/index.html
@@ -16,34 +16,8 @@
           <button class="search-form__search-button">Search</button>
 
       </div>
-<!--
-      <div class="result-container">
-          <div class="error"></div>
+      <div class="result-container"></div>
 
-          <div class="profile">
-
-            <div class="profile__photo"></div>
-            <div class="profile__name"></div>
-            <div class="profile__full-name"></div>
-            <div class="profile__bio"></div>
-
-          </div>
-
-          <div class="repositories">
-
-            <h2 class="repositories__title">Repositories</h2>
-            <hr>
-
-            <div class="repo">
-              <h3>Repo name</h3>
-              <div class="repo__stars">10</div>
-              <div class="repo__fork">30</div>
-            </div>
-
-          </div>
-        
-      </div>
--->
   </div>
 </body>
 </html>
