add new classes, refactoring result class

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Marfeel Frontend test | by Adrian Peso</title>
 </head>
 <body>
-  <div class="container">
+  <div id="app" class="container">
 
       <div class="search-container">
 
